# data-fetcher

./: .env.template  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_app.sh  handle_data.sh  run_app.sh
src/: main.cpp
